# perceptual_image_gen

./: .gitignore  README.md  pyproject.toml  requirements.txt
perceptual_gen/: __init__.py  __main__.py  cli.py  config.py  image_io.py  loss.py  optimizer.py  pipeline.py  style_content_extractor.py  style_content_loss.py  style_extractor.py  style_loss.py  vgg_extractor.py  vgg_model.py  visualization.py
tests/: conftest.py  test_cli.py  test_image_io.py  test_loss.py  test_style_loss.py  test_style_transfer.py
