[project]
name = "perceptual-image-gen"
version = "1.0.0"
description = "Image generation via VGG19 perceptual loss optimization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tensorflow>=2.12,<3.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.pytest.ini_options]
pythonpath = ["."]
